pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidGlobImport8.pkl
import* "../../input-helper/globtest/**.pkl" as globbedImports

// test for ResolveQualifiedDeclaredTypeNode
res: globbedImports.Foo
